<resources>
    <string name="app_name">Invoice</string>

    <string name="title_accountsigin">Sig In</string>
    <string name="title_accountsignup">Sign Up</string>
    <string name="title_customercreation">Creación de Cliente</string>
    <string name="title_firebase">Firebase</string>
    <string name="title_printer">Printer</string>
    <string name="title_customerdetail">Detalle Cliente</string>
    <string name="title_customerlist">Lista Clientes</string>
    <string name="title_invoicecreation">Creación Factura</string>
    <string name="title_ui">Interfaz Gráfica</string>
    <string name="title_utils">Uitlidades</string>
    <string name="title_accounts">Cuentas</string>
    <string name="title_invoicedetail">Detalle de Factura</string>
    <string name="title_invoicelist">Lista de Facturas</string>
    <string name="title_itemcreation">Creación de producto</string>
    <string name="title_itemdetail">Detalle de Producto</string>
    <string name="title_itemlist">Lista de productos</string>
    <string name="title_taskcreation">Creación de tarea</string>
    <string name="title_taskdetail">Detalle de tarea</string>
    <string name="title_tasklist">Lista de tareas</string>

    <string name="imgLogo_decscription">Icono</string>

    <string name="action_settings">Settings</string>

    <string name="btSignIn">Login</string>
    <string name="btSignUp">Registro</string>
    <string name="mainFragment">Pantalla Inicial</string>
    <string name="app_tvCustomer">Clientes</string>
    <string name="app_tvInvoice">Factura</string>
    <string name="app_tvItem">Articulos</string>
    <string name="app_tvTask">Tareas</string>
    <string name="app_btnCreation">Creación</string>
    <string name="app_btnDetail">Detalles</string>
    <string name="app_btnList">Listado</string>
    <string name="app_btnTest">Prueba</string>
</resources>